--- a/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
+++ b/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
@@ -1,22 +1,17 @@
-FROM odoo:{{ odoo_version }}
-MAINTAINER GRAP, Coop It Easy
+FROM ghcr.io/acsone/odoo-bedrock:{{ odoo_version }}-{{python_minor_version_short}}-latest
 
-# Set User root for installations
-USER root
-
-# 1. Make available files in the containers
-
+COPY ./src/odoo /odoo/src/odoo
 COPY debian_requirements.txt /debian_requirements.txt
-
 COPY python_requirements.txt /python_requirements.txt
 
 # 2. Install extra debian packages
-RUN apt-get update || true &&\
- xargs apt-get install -y --no-install-recommends <debian_requirements.txt
+RUN apt-get update || true \
+    && xargs apt-get install -y --no-install-recommends <debian_requirements.txt \
+    && rm -rf /var/lib/apt/lists/*
 
 # 3. Install extra Python librairies
-RUN {{ python_major_version }}\
- -m pip install -r python_requirements.txt
-
-# Reset to odoo user to run the container
-USER odoo
+RUN \
+  pip install --no-cache-dir \
+    -r /odoo/src/odoo/requirements.txt \
+    -f https://wheelhouse.acsone.eu/manylinux2014 \
+  && pip install -r python_requirements.txt
