--- a/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
+++ b/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
@@ -1,6 +1,6 @@
 FROM ghcr.io/acsone/odoo-bedrock:{{ odoo_version }}-{{python_minor_version_short}}-latest
 
-COPY ./src/odoo /odoo/src/odoo
+COPY ./src/odoo/requirements.txt /odoo_requirements.txt
 COPY debian_requirements.txt /debian_requirements.txt
 COPY python_requirements.txt /python_requirements.txt
 
@@ -12,6 +12,8 @@ RUN apt-get update || true \
 # 3. Install extra Python librairies
 RUN \
   pip install --no-cache-dir \
-    -r /odoo/src/odoo/requirements.txt \
-    -f https://wheelhouse.acsone.eu/manylinux2014 \
-  && pip install -r python_requirements.txt
+    -r /odoo_requirements.txt \
+    -f https://wheelhouse.acsone.eu/manylinux2014\
+  && pip install --no-cache-dir \
+    -r /python_requirements.txt \
+    -f https://wheelhouse.acsone.eu/manylinux2014
