--- a/odoo_openupgrade_wizard/templates/config.yml.j2
+++ b/odoo_openupgrade_wizard/templates/config.yml.j2
@@ -14,9 +14,9 @@ odoo_versions:
 
 
 odoo_version_settings:
-{%- for setting in odoo_version_settings %}
-  {{setting['version']}}:
-    python_minor_version_short: {{setting['python_minor_version_short']}}
+{%- for odoo_version in odoo_versions %}
+  {{odoo_version}}:
+    repo_url: False
 {%- endfor %}
 
 
