--- a/odoo_openupgrade_wizard/templates/odoo/python_requirements.txt.j2
+++ b/odoo_openupgrade_wizard/templates/odoo/python_requirements.txt.j2
@@ -5,8 +5,10 @@
 # Mandatory library used in all odoo-openupgrade-wizard
 openupgradelib
 
-# Library used to run 'post-migration.py' scripts
-click-odoo
+# # Library used to run 'post-migration.py' scripts
+# click-odoo
 
 # Library used to run generate-module-analysis command
+# dependencies of the module OCA/server-tools 'upgrade_analysis'
 odoorpc
+mako
