--- a/odoo_openupgrade_wizard/templates/scripts/post-migration.py.j2
+++ b/odoo_openupgrade_wizard/templates/scripts/post-migration.py.j2
@@ -4,3 +4,7 @@ _logger = logging.getLogger(__name__)
 _logger.info("Executing post-migration.py script ...")
 
 env = env  # noqa: F821
+
+# Write custom script here
+
+env.cr.commit()
