[REF] Remove bind fucking mounts (postgres) replaced by nice volumes

--- a/odoo_openupgrade_wizard/templates/config.yml.j2
+++ b/odoo_openupgrade_wizard/templates/config.yml.j2
@@ -1,7 +1,8 @@
 project_name: {{ project_name }}
 
 postgres_image_name: postgres:13
-postgres_container_name: {{project_name}}-db
+postgres_container_name: {{project_name}}-container-postgres
+postgres_volume_name: {{project_name}}-volume-postgres
 
 odoo_host_xmlrpc_port: 9069
 odoo_default_country_code: FR
