--- a/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
+++ b/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
@@ -11,10 +11,5 @@ RUN apt-get update || true \
 
 # 3. Install extra Python librairies
 RUN \
-  /odoo/bin/pip install --no-cache-dir -r /odoo_requirements.txt -f {{ prebuild_wheel_url }} \
-  && /odoo/bin/pip install --no-cache-dir -r /python_requirements.txt
-
-# RUN \
-#   /odoo/bin/pip install --no-cache-dir -r /odoo/src/odoo/requirements.txt -f {{ prebuild_wheel_url }} \
-#   && /odoo/bin/pip install --no-cache-dir -r /python_requirements.txt -f {{ prebuild_wheel_url }} \
-#   && /odoo/bin/pip install -e /odoo/src/odoo
+  pip install --no-cache-dir -r /odoo_requirements.txt -f {{ prebuild_wheel_url }} \
+  && pip install --no-cache-dir -r /python_requirements.txt
