--- a/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
+++ b/odoo_openupgrade_wizard/templates/odoo/Dockerfile.j2
@@ -10,6 +10,5 @@ RUN apt-get update || true \
     && rm -rf /var/lib/apt/lists/*
 
 # 3. Install extra Python librairies
-RUN \
-  pip install --no-cache-dir -r /odoo_requirements.txt -f {{ prebuild_wheel_url }} \
-  && pip install --no-cache-dir -r /python_requirements.txt
+RUN /odoo/bin/pip install --no-cache-dir -r /odoo_requirements.txt -f {{ prebuild_wheel_url }}
+RUN odoo/bin/pip install --no-cache-dir -r /python_requirements.txt
