--- a/odoo_openupgrade_wizard/templates/analysis.html.j2
+++ b/odoo_openupgrade_wizard/templates/analysis.html.j2
@@ -37,8 +37,8 @@
         </tr>
         <tr>
           <td>OCA</td>
-          <td>{{ analysis.get_module_qty('OCA') }}</td>
-          <td>{{ analysis.workload_hour_text('OCA') }}</td>
+          <td>{{ analysis.get_module_qty('oca') }}</td>
+          <td>{{ analysis.workload_hour_text('oca') }}</td>
         </tr>
         <tr>
           <td>Custom</td>
