[FIX] estimate-workload: not_found module not categorized

--- a/odoo_openupgrade_wizard/templates/analysis.html.j2
+++ b/odoo_openupgrade_wizard/templates/analysis.html.j2
@@ -47,7 +47,7 @@
         </tr>
         <tr>
           <td>Not Found</td>
-          <td>{{ analysis.get_module_qty('custom') }}</td>
+          <td>{{ analysis.get_module_qty('not_found') }}</td>
           <td>&nbsp;</td>
         </tr>
       </tbody>
