--- a/odoo_openupgrade_wizard/templates/analysis.html.j2
+++ b/odoo_openupgrade_wizard/templates/analysis.html.j2
@@ -65,7 +65,7 @@
       <thead>
         <tr>
           <th>&nbsp;</th>
-          <th>Estimated time (min)</th>
+          <th>Total</th>
 {%- for odoo_version in ctx.obj['config']['odoo_versions'] -%}
           <th>{{ odoo_version }}</th>
 {% endfor %}
@@ -132,7 +132,11 @@
 
           </td>
 
-          <td>{{odoo_module.workload}}</td>
+          <td>
+          {% if odoo_module.workload %}
+            {{time_to_text(odoo_module.workload)}}
+          {% endif %}
+          </td>
 
   {% for version in odoo_module.analyse.all_versions %}
     {% set module_version = odoo_module.get_module_version(version) %}
@@ -146,7 +150,7 @@
 
       {% if workload %}
         <span style="background-color:lightblue;">
-          ({{ module_version.workload_hour_text()}})
+          ({{time_to_text(workload)}})
         </span>
       {% endif %}
       {% if size_text %}
