[ADD] estimate-workload: ignored module list

--- a/odoo_openupgrade_wizard/templates/config.yml.j2
+++ b/odoo_openupgrade_wizard/templates/config.yml.j2
@@ -35,6 +35,9 @@ migration_steps:
 
 workload_settings:
 
+    # Ignored module list
+    ignored_module_list: []
+
     # porting a module requires 45 minutes minimaly
     port_minimal_time: 45
 
